tests/neg-custom-args/captures/leak-reaches.check
-- Error: tests/neg-custom-args/captures/leak-reaches.scala:18:31 ------------------------------------------------------
18 |    val next: () => Unit = cur.head   // error
   |                           ^^^^^^^^
   |                           Local any in the type of parameter xs leaks into capture scope of method runAll2.
   |                           You could try to abstract the capability in a capset variable.
-- Error: tests/neg-custom-args/captures/leak-reaches.scala:25:35 ------------------------------------------------------
25 |    val next: () => Unit = cur.get.head // error
   |                           ^^^^^^^^^^^^
   |                           Local any in the type of parameter xs leaks into capture scope of method runAll3.
   |                           You could try to abstract the capability in a capset variable.
-- Error: tests/neg-custom-args/captures/leak-reaches.scala:33:40 ------------------------------------------------------
33 |  val id: (x: File^) -> File^{fresh} = x => x // error
   |                                        ^
   |Separation failure: anonymous function of type (x: File^): File^{fresh}'s inferred result type File^ hides parameter x.
   |The parameter needs to be annotated with consume to allow this.
-- Error: tests/neg-custom-args/captures/leak-reaches.scala:34:36 ------------------------------------------------------
34 |  val id2: File^ -> File^{fresh} = x => x // error
   |                                    ^
   |Separation failure: anonymous function of type (x: File^): File^{fresh}'s inferred result type File^ hides parameter x.
   |The parameter needs to be annotated with consume to allow this.
-- Error: tests/neg-custom-args/captures/leak-reaches.scala:50:28 ------------------------------------------------------
50 |  ps.map((x, y) => compose1(x, y)) // error
   |                            ^
   |Separation failure: argument of type  A ->{x} A
   |to method compose1: [A, B, C](f: A => B, g: B => C): A ->{f, g} C
   |corresponds to capture-polymorphic formal parameter f of type  A^'s1 => A^'s2
   |and hides capabilities  {x}.
   |Some of these overlap with the captures of the second argument with type  A ->{y} A.
   |
   |  Hidden set of current argument        : {x}
   |  Hidden footprint of current argument  : {x, C}
   |  Capture set of second argument        : {y}
   |  Footprint set of second argument      : {y, C}
   |  The two sets overlap at               : {C}
   |
   |where:    => refers to a root capability created in anonymous function of type (x$1: (A ->{C} A, A ->{C} A)): A^'s3 ->{C} A^'s4 when checking argument to parameter f of method compose1
